Se coninuo mejorando la página de incio, se agrego el menu de forma correcta, los servicios, los clientes y testimonios

--- a/babelPage/package.json
+++ b/babelPage/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
