--- a/babelPage/package.json
+++ b/babelPage/package.json
@@ -15,10 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "motion": "^11.12.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "sweetalert2": "^11.14.5"
